<resources>
    <string name="app_name">Quizini</string>
    <string name="you_ve_successfully_completed_the_quiz">You\'ve successfully completed the quiz</string>
    <string name="todo">TODO</string>
    <string name="start_new_quiz">Start New Quiz</string>
    <string name="wrong_answers_0">Wrong Answers : 0</string>
    <string name="correct_answer_0">Correct Answer : 0</string>
    <string name="_1_10">1/10</string>
    <string name="option_2">Option 2</string>
    <string name="question_will_come_here">Question will come here ....</string>
    <string name="option_1">Option 1</string>
    <string name="option_3">Option 3</string>
    <string name="_00_59">00:59</string>
    <string name="option_4">Option 4</string>
</resources>