<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
  android:background="@drawable/congratulation"

    tools:context=".QuizResultsActivity">

    <LinearLayout

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="560dp"
        android:layout_centerHorizontal="true"

        >

        <ImageView
            android:id="@+id/logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:contentDescription="@string/todo"
            android:gravity="center"
            android:src="@drawable/logo"
            tools:ignore="ImageContrastCheck" />

    </LinearLayout>

    <TextView

        android:id="@+id/successfulText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="510dp"
        android:gravity="center"
        android:text="@string/you_ve_successfully_completed_the_quiz"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold" />

    <LinearLayout

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/successfulText"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/correctAnswers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/correct_answer_0"
            android:textColor="#388E3C"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/incorrectAnswer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/wrong_answers_0"
            android:textColor="#388E3C"
            android:textStyle="bold"
            tools:ignore="TextContrastCheck" />

            </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/startNewQuiz"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="60dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="100dp"
        android:background="@drawable/round_back_green"
        android:text="@string/start_new_quiz"
        android:textColor="#4527A0" />
</RelativeLayout>